log
Thu, Apr 17, 2025 11:55:27 AM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:14: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
 map->buckets = (Pair*)calloc(capacity, sizeof(Pair));
              ^
cc1.exe: all warnings being treated as errors
eeef3b7
Thu, Apr 17, 2025 12:02:27 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:14: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
 map->buckets = (Pair*)calloc(capacity, sizeof(Pair));
              ^
cc1.exe: all warnings being treated as errors
11896e9
Thu, Apr 17, 2025 12:10:09 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:14: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
 map->buckets = (Pair*)calloc(capacity, sizeof(Pair));
              ^
cc1.exe: all warnings being treated as errors
8e945f6
Thu, Apr 17, 2025 12:11:34 PM: 
 hashmap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
bfcbd8c
Thu, Apr 17, 2025  2:51:27 PM: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:44:25: error: passing argument 2 of 'hash' makes integer from pointer without a cast [-Werror=int-conversion]
     int pos = hash(key, value);
                         ^~~~~
hashmap.c:27:6: note: expected 'long int' but argument is of type 'void *'
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:49:60: error: comparison between pointer and integer [-Werror]
     if(map->buckets[pos] == NULL || map->buckets[pos]->key == POSNULA){
                                                            ^~
hashmap.c:52:9: error: statement with no effect [-Werror=unused-value]
         for(pos; pos < map->capacity; pos++){
         ^~~
hashmap.c:53:71: error: comparison between pointer and integer [-Werror]
             if(map->buckets[pos + 1] == NULL || map->buckets[pos + 1] == POSNULA){
                                                                       ^~
cc1.exe: all warnings being treated as errors
b759326
Thu, Apr 17, 2025  2:53:39 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:49:60: error: comparison between pointer and integer [-Werror]
     if(map->buckets[pos] == NULL || map->buckets[pos]->key == POSNULA){
                                                            ^~
hashmap.c:52:9: error: statement with no effect [-Werror=unused-value]
         for(pos; pos < map->capacity; pos++){
         ^~~
hashmap.c:53:71: error: comparison between pointer and integer [-Werror]
             if(map->buckets[pos + 1] == NULL || map->buckets[pos + 1] == POSNULA){
                                                                       ^~
cc1.exe: all warnings being treated as errors
f01fd07
Thu, Apr 17, 2025  2:54:39 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:49:60: error: comparison between pointer and integer [-Werror]
     if(map->buckets[pos] == NULL || map->buckets[pos]->key == POSNULA){
                                                            ^~
hashmap.c:52:9: error: statement with no effect [-Werror=unused-value]
         for(pos; pos < map->capacity; pos++){
         ^~~
hashmap.c:53:76: error: comparison between pointer and integer [-Werror]
             if(map->buckets[pos + 1] == NULL || map->buckets[pos + 1]->key == POSNULA){
                                                                            ^~
cc1.exe: all warnings being treated as errors
bce98e2
Thu, Apr 17, 2025  3:07:08 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:49:62: error: comparison between pointer and integer [-Werror]
     if(map->buckets[pos] == NULL || map->buckets[pos]->value == POSNULA){
                                                              ^~
hashmap.c:52:9: error: statement with no effect [-Werror=unused-value]
         for(pos; pos < map->capacity; pos++){
         ^~~
hashmap.c:53:78: error: comparison between pointer and integer [-Werror]
             if(map->buckets[pos + 1] == NULL || map->buckets[pos + 1]->value == POSNULA){
                                                                              ^~
cc1.exe: all warnings being treated as errors
1b76d72
